relatorios/202113075/T1/cppcheck.txt
t1vicentevgn.cpp:24:24: error: Uninitialized variable: x [uninitvar]
  while(std::cin >> p2.x >> p2.y){
                       ^
